[project]
name = "hat-syslog"
version = "0.7.19"
description = "Hat Syslog"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "appdirs ~=1.4.4",
    "hat-aio ~=0.7.10",
    "hat-json ~=0.5.28",
    "hat-juggler ~=0.6.21",
    "hat-util ~=0.6.16",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

[project.scripts]
hat-syslog-server = "hat.syslog.server.main:main"
hat-syslog-generator = "hat.syslog.generator:main"

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-syslog.git"
Documentation = "http://hat-syslog.hat-open.com"

[project.optional-dependencies]
dev = [
    "hat-doit ~=0.15.16",
    "sphinxcontrib-plantuml >=0.25",
    "sphinxcontrib-programoutput >=0.17",
]

[build-system]
requires = ["hat-doit ~=0.15.16"]
build-backend = "hat.doit.pep517"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
